# mlb-daily-email

./: .gitignore  README.md  app.py  database.py  db.sqlite3  forms.py  get_stats.py  logger.py  mlbdailyemail.service  models.py  pyproject.toml  requirements.txt  schedulers.py  send_email.py  settings.template.py
static/css/: main.css
templates/: auth.html  base.html  bootstrap.j2  config.html  config_add.html  config_edit.html  daily.j2  index.html  today.html
templates/security/: change_password.html  login_user.html
