[tool.poetry]
name = "mlb-daily-email"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pipdeptree = "^2.25.0"
bleach = "^6.2.0"
flask-apscheduler = "^1.13.1"
flask-babelex = "^0.9.4"
flask-bcrypt = "^1.0.1"
flask-mail = "^0.10.0"
flask-mailman = "^1.1.1"
flask-migrate = "^4.1.0"
flask-security-too = "^5.6.0"
gunicorn = "^23.0.0"
importlib-metadata = "^8.6.1"
mlb-statsapi = "^1.8.1"
sqlalchemy-utils = "^0.41.2"
setuptools = "^78.1.0"
wheel = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
